k8s-manifests/infrastructure/elk-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
spec:
  ingressClassName: traefik
  rules:
  - host: kibana.taylor.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
